styles.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

@font-face {
  font-family: Norse-Bold;
  src: url(./assets/Norse-Bold.otf);
}

.container {
  display: flex;
  justify-content: space-between;
  width: 100dvw;
  height: 100dvh;
}

/* ####### Header Styling ########### */

.left-view {
  flex: 1;
  background-image: url(./assets/path-less-taken.jpg);
  background-size: cover;
  background-repeat: no-repeat;
  display: flex;
  justify-content: space-between;
  flex-direction: column;
}

.right-view {
  flex: 2;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.heading-cont {
  background-color: rgba(0, 0, 0, 0.7);
  min-width: 300px;
  display: flex;
  justify-content: center;
  margin-top: 200px;
}

.photo-credit {
  margin-bottom: 20px;
  display: flex;
  justify-content: center;
}

.photo-credit * {
  color: white;
  font-weight: bolder;
  text-shadow: black 1px 0 10px;
}

img {
  height: 100px;
  margin: 10px 0 10px 0;
}

h1 {
  margin: auto 0;
  color: white;
  font-family: Norse-Bold;
  font-size: 80px;
}

/* ############ Form Section Styling ##################### */


.intro {
  flex: 1;
  padding: 0 50px 50px 50px;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
}

.details {
    flex: 1.1;
    box-shadow: 0px -10px 15px rgb(175, 175, 175), 0px 10px 15px rgb(175, 175, 175);
}

.enter {
    flex: 1;
    padding: 50px;
}

.intro p {
    font-size: 1.5em;
    font-weight: bold;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell;
}

button {
    width: 250px;
    background-color: darkolivegreen;
    border-radius: 10px;
    font-size: 20px;
    padding: 15px 0 15px 0;
    color: wheat;
    font-weight: bold;
    cursor: pointer;
    border: none;
    box-shadow: 0px 0px 10px 1px rgb(139, 139, 139);

}

button:hover {
    background-color: rgb(75, 95, 40);
    color: whitesmoke;
}

button:active {
    transform: scale(0.97);
}

.enter p {
    margin-top: 50px;
    font-size: 1.2em;
    font-family: Arial, Helvetica, sans-serif;
    font-weight: bold;
}

.enter a {
    color: green;
    text-decoration: none;
}

.form-cont {
    display: flex;
    justify-content: center;
    flex-direction: column;
    height: 20em;
    padding: 0 50px 0 50px;
}

.form-cont p {
    font-size: 1.5em;
    margin-bottom: 20px;
    font-family: Arial, Helvetica, sans-serif;
    font-weight: bold;
}

.input-cont {
    display: flex;
    flex-direction: column;
    width: 300px;
}

.input-container {
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
    gap: 20px 100px;
    overflow: auto;
    padding: 5px;
}

input {
    height: 30px;
    border: 2px solid rgb(223, 221, 221);
    border-radius: 5px;
    font-family: 'Source Sans Pro', Helvetica, sans-serif;
    font-weight: 600;
    font-size: 100%;
    color: rgb(114, 113, 113);
    padding: 0 20px 0 10px;
}


input:focus:valid {
    outline: 3px solid rgb(15, 132, 241);
    box-shadow: 0px 5px 10px rgb(139, 139, 139);
    color: black;
}

input:focus:invalid {
    outline: 3px solid rgb(15, 132, 241);
    box-shadow: 0px 5px 10px rgb(139, 139, 139);
    color: black;
}

input:user-valid {
    outline: 1px solid #8BC34A;
    background-color: rgba(169, 197, 136, 0.25);
}

input:user-invalid {
    outline: 3px solid #b92326;
    background-color: rgba(185, 80, 81, 0.25);
}


label {
    font-weight: bolder;
    color: rgb(88, 88, 88);
    font-family: 'Source Sans Pro', Helvetica, sans-serif;
    margin-bottom: 3px;
}

span {
    color: #b92326;
    font-weight: bolder;
}

